--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ body {
   margin: auto 0;
 }
 
+button {
+  cursor: pointer;
+}
 header {
   padding: 1rem 0;
   display: flex;
@@ -83,6 +86,7 @@ input[type="search"]::placeholder {
 .planet-container {
   display: flex;
   flex-direction: column;
+  cursor: pointer;
 }
 .planet-icon {
   width: 100%;
